# RoutineCloudServer

./: .dockerignore  .gitignore  AGENTS.md
backend/: .env  .gitignore  README.md  alembic.ini  openapi.json  pixi.toml  pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py  auth.py  device.py  friends.py  oauth.py  oauth2.py  routine.py  routine_control.py  runtime.py  task.py  user.py
backend/app/core/: config.py  endpoints.py  grants.py  oauth2.py  requests.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 183f881f17c5_routine_access.py  342b38619e35_.py  3a747f956841_oauthconsent.py  42b2a3c7d26b_init.py  4bcb0b713bc3_make_datetime_fields_timezone_aware.py  4d2a9f31bc10_add_pause_tracking_to_runtime_state.py  6b2b1c7c9f41_runtime_api_alignment.py  7293259d56ba_add_active_routine.py  (+11 more)
backend/app/models/: auth.py  base.py  device.py  friendship.py  oauth2.py  routine.py  routine_access.py  routine_runtime_state.py  routine_task.py  task.py  user.py
backend/app/schemas/: base.py  device.py  friend.py  oauth2.py  routine.py  routine_control.py  runtime.py  security.py  socketio.py  task.py  user.py
backend/app/services/: routine_command_service.py  routine_payloads.py  runtime_event_bus.py  runtime_state.py
backend/app/socketio/: auth.py  bus.py  server.py  state.py
backend/app/websocket/: manager.py  routes.py
backend/docs/: asyncapi.socketio.device.yaml
backend/openapi_doc/: README.md
backend/openapi_doc/configs/: kotlin.json  typescript-axios.json
backend/openapi_doc/specs/: openapi-v1.json  openapi.json
backend/scripts/: README.md  generate_openapi.py  init_db.py  prestart.sh  run.py
backend/tests/: conftest.py  test_admin_api.py
(+75 files in other folders)
