[project]
name = "routine-cloud-server-backend"
version = "0.1.0"
description = "Backend for Routine Cloud application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1,<0.117",
    "uvicorn>=0.35.0,<0.36",
    "sqlalchemy>=2.0.41,<3",
    "alembic>=1.16.4,<2",
    "psycopg2-binary>=2.9.10,<3",
    "python-multipart>=0.0.20,<0.0.21",
    "authlib>=1.6.1,<2",
    "pydantic[email,timezone]>=2.0",
    "sqlmodel",
    "pydantic-settings>=2.10.1,<3",
    "websockets>=15.0.1,<16",
    "passlib>=1.7.4,<2",
    "bcrypt>=4.3.0,<5",
    "pyjwt",
    "cryptography>=45.0.5,<46",
    "pytest>=8.4.1,<9",
    "httpx>=0.28.1,<0.29",
    "pyrootutils>=1.0.4,<2",
    "requests",
    "sqladmin",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
